[gd_scene load_steps=5 format=3 uid="uid://hofdaai20k3v"]

[ext_resource type="Script" path="res://Scripts/MenuScripts/MainMenu.gd" id="1_ycha7"]
[ext_resource type="PackedScene" uid="uid://eyta44dyjhb4" path="res://Assets/UI/mainButton.tscn" id="2_vq8hd"]
[ext_resource type="Theme" uid="uid://bh227o258gk1k" path="res://Assets/UI/Styles/TextStyle.tres" id="3_81mnq"]
[ext_resource type="PackedScene" uid="uid://bk48tarmsgeyo" path="res://Scenes/Menus/pauseOptionsMenu.tscn" id="4_tg8sr"]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource("1_ycha7")

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuitButton" parent="MainMenu" instance=ExtResource("2_vq8hd")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 190.0
offset_right = 93.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit Game"

[node name="OptionsButton" parent="MainMenu" instance=ExtResource("2_vq8hd")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 111.0
offset_right = 93.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
text = "Options"

[node name="MultiplayerButton" parent="MainMenu" instance=ExtResource("2_vq8hd")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = 33.0
offset_right = 93.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
text = "Multiplayer"

[node name="PlayButton" parent="MainMenu" instance=ExtResource("2_vq8hd")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -45.0
offset_right = 93.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
text = "Solo Play"

[node name="Title" type="RichTextLabel" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -242.0
offset_right = 150.08
offset_bottom = -141.96
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_81mnq")
theme_override_font_sizes/normal_font_size = 80
text = "STATUES"
scroll_active = false

[node name="PauseMenu" parent="." instance=ExtResource("4_tg8sr")]

[connection signal="pressed" from="MainMenu/QuitButton/MainButton" to="." method="OnQuitPressed"]
[connection signal="pressed" from="MainMenu/OptionsButton/MainButton" to="." method="OnOptionsPressed"]
[connection signal="pressed" from="MainMenu/MultiplayerButton/MainButton" to="." method="OnMultiPlayPressed"]
[connection signal="pressed" from="MainMenu/PlayButton/MainButton" to="." method="OnPlayPressed"]

[editable path="MainMenu/QuitButton"]
[editable path="MainMenu/OptionsButton"]
[editable path="MainMenu/MultiplayerButton"]
[editable path="MainMenu/PlayButton"]
